--- a/src/views/admin/pages/add-blog.ejs
+++ b/src/views/admin/pages/add-blog.ejs
@@ -41,7 +41,7 @@
           <button type="submit" class="btn btn-primary btn-space">Ekle</button>
         </form>
       </div>
-      <!-- <div class="card-footer d-sm-flex">
+      <div class="card-footer d-sm-flex">
         <div class="mt-2 mb-2">
           <a href="javascript:void(0)" class="btn btn-icon btn-white btn-svg" data-toggle="tooltip" title="" data-original-title="Attach"
             ><svg class="svg-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="100%" width="100%">
@@ -70,7 +70,7 @@
           <button type="button" class="btn btn-danger btn-space">Vazgeç</button>
           
         </div>
-      </div> -->
+      </div>
     </div>
   </div>
 </div>
