--- a/src/views/user/partials/top-navbar-dark.ejs
+++ b/src/views/user/partials/top-navbar-dark.ejs
@@ -2,7 +2,7 @@
   <!-- Top Navbar -->
   <div class="container">
     <div class="row">
-      <nav class="navbar navbar-expand-lg navbar-light mt-3">
+      <nav class="navbar navbar-expand-lg navbar-light pt-3 pb-3">
         <div class="container">
           <a class="navbar-brand logo" href="/">Dialysing<span>.com</span></a>
           <a href="#" class="location mx-1"><i class="bi bi-geo-alt-fill" type="button" class="btn btn-outline-white mx-0" data-bs-toggle="modal" data-bs-target="#staticBackdrop"></i> <span id="location"></span></a>
